# biznes-vokrug-backend

./: .env  .gitignore  Dockerfile  README.md  minio-docker-compose.yml  package.json  pyproject.toml  requirements.txt  test.db
biznes_vokrug_backend/: auth.py  crud.py  database.py  main.py  minio.py  models.py  routers.py  schemas.py
biznes_vokrug_backend/routers/: category_product.py  routers.py
biznes_vokrug_backend/utils/: redis_dadata.py
bv_dev_db/: pg-docker-compose.yml
devAlembic/: env.py
devAlembic/versions/: 06747fc5a3b0_.py  2e95e610c1a2_.py  3afed5165076_.py  5587e3b14311_.py  5ae2cfac087d_.py  82c1339281ac_.py  83626956c2ce_.py  8b8e6e9363d9_.py  9048af3172f9_.py  96e83561ff00_.py  97a3eeb6bd84_.py  a17ecd8065c4_.py  a7dad6be3811_.py  b1641053cf82_.py  d4395c23ca51_.py  d6225d28a19a_.py  e936bda96d4f_.py  f910988ebb83_.py
madsoft/: crud.py  main.py  minio.py  models.py  routers.py  schemas.py
test_db/: pg-docker-compose.yml
tests/: test_crud.py  test_routers.py
