[tool.poetry]
name = "biznes-vokrug-backend"
version = "0.1.0"
description = ""
authors = ["twoballs-ai <twoballs20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
click = "^8.1.7"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
fastapi = "^0.115.4"
fastapi-cli = "^0.0.5"
greenlet = "^3.1.1"
h11 = "^0.14.0"
httpcore = "^1.0.6"
httptools = "^0.6.4"
httpx = "^0.27.2"
idna = "^3.10"
iniconfig = "^2.0.0"
jinja2 = "^3.1.4"
mako = "^1.3.6"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
mdurl = "^0.1.2"
minio = "^7.2.10"
orjson = "^3.10.11"
packaging = "^24.2"
pluggy = "^1.5.0"
psycopg2-binary = "^2.9.10"
pycparser = "^2.22"
pycryptodome = "^3.21.0"
pydantic = "^2.9.2"
pydantic-core = "^2.26.0"
pygments = "^2.18.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.17"
pyyaml = "^6.0.2"
rich = "^13.9.4"
shellingham = "^1.5.4"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
starlette = "^0.41.2"
typer = "^0.13.0"
typing-extensions = "^4.12.2"
ujson = "^5.10.0"
urllib3 = "^2.2.3"
uvicorn = "^0.32.0"
uvloop = "^0.21.0"
watchfiles = "^0.24.0"
websockets = "^14.0"
redis = "^5.2.0"
requests = "^2.32.3"
passlib = "^1.7.4"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
